--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               padding-bottom: 2px;
               cursor: pointer;
             "
-            onclick="myfunc()"
+            onclick="viewPassword()"
           />
         </div>
         <p class="forgot">FORGOT PASSWORD?</p>
